<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delto_5f_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="khc@tesollo.com">hong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>booost</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
